--- a/Source/Qactive.Providers.Streaming-Net45/Qactive.Providers.Streaming-Net45.csproj
+++ b/Source/Qactive.Providers.Streaming-Net45/Qactive.Providers.Streaming-Net45.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\WhiteTie.1.3.16\build\WhiteTie.props" Condition="Exists('..\..\packages\WhiteTie.1.3.16\build\WhiteTie.props')" />
-  <Import Project="..\..\Build\NuGet.props" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{63F23287-B0D8-408E-995D-BF15A85CEE48}</ProjectGuid>
+    <ProjectGuid>{2325C60C-FC0E-46B5-BA1B-9BAB8979EAEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Qactive.Expressions</RootNamespace>
-    <AssemblyName>Qactive.Expressions</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Qactive</RootNamespace>
+    <AssemblyName>Qactive.Providers.Streaming</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -22,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;TRACING;CAS;REFLECTION</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
@@ -74,11 +73,11 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL</DefineConstants>
+    <DefineConstants>TRACE;REMOTING;SERIALIZATION;TRACING;CAS;REFLECTION</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -132,6 +131,27 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Linq, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Providers, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Providers.2.2.5\lib\net45\System.Reactive.Providers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -140,42 +160,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
-      <Link>Properties\AssemblyInfoShared.cs</Link>
-    </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializableBinaryExpression.cs" />
-    <Compile Include="SerializableBlockExpression.cs" />
-    <Compile Include="SerializableConditionalExpression.cs" />
-    <Compile Include="SerializableConstantExpression.cs" />
-    <Compile Include="SerializableDefaultExpression.cs" />
-    <Compile Include="SerializableExpression.cs" />
-    <Compile Include="SerializableExpressionConverter.cs" />
-    <Compile Include="SerializableExpressionExtensions.cs" />
-    <Compile Include="SerializableGotoExpression.cs" />
-    <Compile Include="SerializableIndexExpression.cs" />
-    <Compile Include="SerializableInvocationExpression.cs" />
-    <Compile Include="SerializableLabelExpression.cs" />
-    <Compile Include="SerializableLambdaExpression.cs" />
-    <Compile Include="SerializableListInitExpression.cs" />
-    <Compile Include="SerializableLoopExpression.cs" />
-    <Compile Include="SerializableMemberExpression.cs" />
-    <Compile Include="SerializableMemberInitExpression.cs" />
-    <Compile Include="SerializableMethodCallExpression.cs" />
-    <Compile Include="SerializableNewArrayExpression.cs" />
-    <Compile Include="SerializableNewExpression.cs" />
-    <Compile Include="SerializableParameterExpression.cs" />
-    <Compile Include="SerializableRuntimeVariablesExpression.cs" />
-    <Compile Include="SerializableSwitchExpression.cs" />
-    <Compile Include="SerializableTryExpression.cs" />
-    <Compile Include="SerializableTypeBinaryExpression.cs" />
-    <Compile Include="SerializableUnaryExpression.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <CodeAnalysisDictionary Include="..\..\Build\Properties\CodeAnalysisDictionary.xml">
       <Link>Properties\CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\AsyncConsumerQueue.cs">
+      <Link>AsyncConsumerQueue.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\DuplexStreamMessage.cs">
+      <Link>DuplexStreamMessage.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\GlobalSuppressions.cs">
+      <Link>GlobalSuppressions.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\IStreamQbservableProtocol.cs">
+      <Link>IStreamQbservableProtocol.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\StreamClientDuplexQbservableProtocolSink.cs">
+      <Link>StreamClientDuplexQbservableProtocolSink.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\StreamMessage.cs">
+      <Link>StreamMessage.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\StreamQbservableProtocol.cs">
+      <Link>StreamQbservableProtocol.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\StreamQbservableProtocolFactory.cs">
+      <Link>StreamQbservableProtocolFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Streaming\StreamServerDuplexQbservableProtocolSink.cs">
+      <Link>StreamServerDuplexQbservableProtocolSink.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive\Extensions\Observable3.cs">
+      <Link>Extensions\Observable3.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive\QbservableServer - Secure.cs">
+      <Link>QbservableServer - Secure.cs</Link>
+    </Compile>
+    <Compile Include="ISecureQbservableProviderFactory.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Errors.Designer.cs">
+      <DependentUpon>Errors.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Errors.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Errors.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Qactive-Net45\Qactive-Net45.csproj">
+      <Project>{fdfe9523-bb5d-4e3f-a2da-aec88ec556eb}</Project>
+      <Name>Qactive-Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Qactive.Expressions-Net45\Qactive.Expressions-Net45.csproj">
+      <Project>{49736eb0-e17e-42c2-a9d1-01f5c45e853c}</Project>
+      <Name>Qactive.Expressions-Net45</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
