--- a/Source/Qactive.Providers.Tcp-Net45/Qactive.Providers.Tcp-Net45.csproj
+++ b/Source/Qactive.Providers.Tcp-Net45/Qactive.Providers.Tcp-Net45.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\WhiteTie.1.3.16\build\WhiteTie.props" Condition="Exists('..\..\packages\WhiteTie.1.3.16\build\WhiteTie.props')" />
-  <Import Project="..\..\Build\NuGet.props" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{63F23287-B0D8-408E-995D-BF15A85CEE48}</ProjectGuid>
+    <ProjectGuid>{FF10503F-4E3A-427D-B935-ABD5C85A826C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Qactive.Expressions</RootNamespace>
-    <AssemblyName>Qactive.Expressions</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Qactive</RootNamespace>
+    <AssemblyName>Qactive.Providers.Tcp</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -22,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;TRACING;CAS;REFLECTION;CAS_IN_STREAMING</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
@@ -74,11 +73,11 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL</DefineConstants>
+    <DefineConstants>TRACE;REMOTING;SERIALIZATION;TRACING;CAS;REFLECTION;CAS_IN_STREAMING</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -132,6 +131,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Linq, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -143,42 +158,63 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="..\Qactive.Providers.Tcp\GlobalSuppressions.cs">
+      <Link>GlobalSuppressions.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\ITcpQactiveProviderTransportInitializer.cs">
+      <Link>ITcpQactiveProviderTransportInitializer.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\Nop.cs">
+      <Link>Nop.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpClientTermination.cs">
+      <Link>TcpClientTermination.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQactiveDefaults.cs">
+      <Link>TcpQactiveDefaults.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQactiveProvider.cs">
+      <Link>TcpQactiveProvider.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQactiveProviderFactory.cs">
+      <Link>TcpQactiveProviderFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQactiveProviderFactory{TTransportInitializer}.cs">
+      <Link>TcpQactiveProviderFactory{TTransportInitializer}.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQbservable.cs">
+      <Link>TcpQbservable.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQbservableClient.cs">
+      <Link>TcpQbservableClient.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQbservableServer - Secure.cs">
+      <Link>TcpQbservableServer - Secure.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Providers.Tcp\TcpQbservableServer.cs">
+      <Link>TcpQbservableServer.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializableBinaryExpression.cs" />
-    <Compile Include="SerializableBlockExpression.cs" />
-    <Compile Include="SerializableConditionalExpression.cs" />
-    <Compile Include="SerializableConstantExpression.cs" />
-    <Compile Include="SerializableDefaultExpression.cs" />
-    <Compile Include="SerializableExpression.cs" />
-    <Compile Include="SerializableExpressionConverter.cs" />
-    <Compile Include="SerializableExpressionExtensions.cs" />
-    <Compile Include="SerializableGotoExpression.cs" />
-    <Compile Include="SerializableIndexExpression.cs" />
-    <Compile Include="SerializableInvocationExpression.cs" />
-    <Compile Include="SerializableLabelExpression.cs" />
-    <Compile Include="SerializableLambdaExpression.cs" />
-    <Compile Include="SerializableListInitExpression.cs" />
-    <Compile Include="SerializableLoopExpression.cs" />
-    <Compile Include="SerializableMemberExpression.cs" />
-    <Compile Include="SerializableMemberInitExpression.cs" />
-    <Compile Include="SerializableMethodCallExpression.cs" />
-    <Compile Include="SerializableNewArrayExpression.cs" />
-    <Compile Include="SerializableNewExpression.cs" />
-    <Compile Include="SerializableParameterExpression.cs" />
-    <Compile Include="SerializableRuntimeVariablesExpression.cs" />
-    <Compile Include="SerializableSwitchExpression.cs" />
-    <Compile Include="SerializableTryExpression.cs" />
-    <Compile Include="SerializableTypeBinaryExpression.cs" />
-    <Compile Include="SerializableUnaryExpression.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Qactive-Net45\Qactive-Net45.csproj">
+      <Project>{fdfe9523-bb5d-4e3f-a2da-aec88ec556eb}</Project>
+      <Name>Qactive-Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Qactive.Providers.Streaming-Net45\Qactive.Providers.Streaming-Net45.csproj">
+      <Project>{2325c60c-fc0e-46b5-ba1b-9bab8979eaee}</Project>
+      <Name>Qactive.Providers.Streaming-Net45</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\..\Build\Properties\CodeAnalysisDictionary.xml">
       <Link>Properties\CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
