--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Operators\GroupJoinTests.cs" />
     <Compile Include="Operators\JoinTests.cs" />
+    <Compile Include="Queries\DuplexTests.cs" />
     <Compile Include="Queries\NestedQueryTests.cs" />
     <Compile Include="Operators\SelectTests.cs" />
     <Compile Include="Operators\WhereTests.cs" />
