--- a/Source/SharedLibrary/packages.config
+++ b/Source/SharedLibrary/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net46" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net46" />
+  <package id="WhiteTie" version="1.3.16" targetFramework="net461" developmentDependency="true" />
 </packages>
