--- a/Source/QbservableClient/app.config
+++ b/Source/QbservableClient/app.config
@@ -10,6 +10,7 @@
     <switches>
       <!-- Off, Error, Warning, Information, Verbose -->
       <add name="Qactive" value="Verbose" />
+      <add name="Qactive.Expressions" value="Off" />
       <add name="Network" value="Warning" />
     </switches>
 
@@ -20,7 +21,7 @@
           <add name="LogFile" />
         </listeners>
       </source>
-      <source name="Qactive.Expressions" switchName="Qactive">
+      <source name="Qactive.Expressions" switchName="Qactive.Expressions">
         <listeners>
           <add name="LogFile" />
         </listeners>
