Added a complex test involving several common query patterns.

--- a/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
+++ b/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
@@ -105,6 +105,9 @@
     <Compile Include="..\Qactive.Tests\Operators\WhereTests.cs">
       <Link>Operators\WhereTests.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive.Tests\Queries\ComplexTests.cs">
+      <Link>Queries\ComplexTests.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\Queries\DuplexTests.cs">
       <Link>Queries\DuplexTests.cs</Link>
     </Compile>
