--- a/Source/Qactive-Net45/packages.config
+++ b/Source/Qactive-Net45/packages.config
@@ -6,4 +6,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Providers" version="2.2.5" targetFramework="net452" />
+  <package id="WhiteTie" version="1.3.16" targetFramework="net452" developmentDependency="true" />
 </packages>
