--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -95,12 +95,18 @@
     <Compile Include="Queries\NestedQueryTests.cs" />
     <Compile Include="Operators\SelectTests.cs" />
     <Compile Include="Operators\WhereTests.cs" />
+    <Compile Include="Tcp\Queries\TcpComplexTests.cs" />
+    <Compile Include="Tcp\Queries\TcpDuplexTests.cs" />
+    <Compile Include="Tcp\Queries\TcpNestedQueryTests.cs" />
+    <Compile Include="Tcp\TcpTestService.cs" />
+    <Compile Include="Tcp\TcpTestService{TSource}.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestDuplexMessage.cs" />
     <Compile Include="TestMessage.cs" />
     <Compile Include="TestQactiveProvider.cs" />
     <Compile Include="TestQbservableProtocol.cs" />
     <Compile Include="TestService.cs" />
+    <Compile Include="TestServiceBase.cs" />
     <Compile Include="TestService{TSource}.cs" />
     <Compile Include="TransportStream.cs" />
   </ItemGroup>
