--- a/Examples/QbservableServer/QbservableServer.csproj
+++ b/Examples/QbservableServer/QbservableServer.csproj
@@ -99,19 +99,19 @@
     <None Include="Properties\Server.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Qactive.Expressions\Qactive.Expressions.csproj">
+    <ProjectReference Include="..\..\Source\Qactive.Expressions\Qactive.Expressions.csproj">
       <Project>{63f23287-b0d8-408e-995d-bf15a85cee48}</Project>
       <Name>Qactive.Expressions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Qactive.Providers.Streaming\Qactive.Providers.Streaming.csproj">
+    <ProjectReference Include="..\..\Source\Qactive.Providers.Streaming\Qactive.Providers.Streaming.csproj">
       <Project>{c83a5841-a1ed-454c-9c66-238ad217ee83}</Project>
       <Name>Qactive.Providers.Streaming</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Qactive.Providers.Tcp\Qactive.Providers.Tcp.csproj">
+    <ProjectReference Include="..\..\Source\Qactive.Providers.Tcp\Qactive.Providers.Tcp.csproj">
       <Project>{33525618-7ed6-4b4e-a4b7-945beaa372ff}</Project>
       <Name>Qactive.Providers.Tcp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Qactive\Qactive.csproj">
+    <ProjectReference Include="..\..\Source\Qactive\Qactive.csproj">
       <Project>{9b68408d-1974-4f76-9c89-eccd466a25e0}</Project>
       <Name>Qactive</Name>
     </ProjectReference>
