--- a/Examples/SharedLibrary/SharedLibrary.csproj
+++ b/Examples/SharedLibrary/SharedLibrary.csproj
@@ -89,11 +89,11 @@
     <None Include="Properties\SharedLib.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Qactive.Expressions\Qactive.Expressions.csproj">
+    <ProjectReference Include="..\..\Source\Qactive.Expressions\Qactive.Expressions.csproj">
       <Project>{63f23287-b0d8-408e-995d-bf15a85cee48}</Project>
       <Name>Qactive.Expressions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Qactive\Qactive.csproj">
+    <ProjectReference Include="..\..\Source\Qactive\Qactive.csproj">
       <Project>{9b68408d-1974-4f76-9c89-eccd466a25e0}</Project>
       <Name>Qactive</Name>
     </ProjectReference>
