--- a/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
+++ b/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
@@ -81,6 +81,9 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive.Tests\Any.cs">
+      <Link>Any.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\CoreTests.cs">
       <Link>CoreTests.cs</Link>
     </Compile>
@@ -93,6 +96,9 @@
     <Compile Include="..\Qactive.Tests\Extensions\ObservableExtensions.cs">
       <Link>Extensions\ObservableExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive.Tests\NonSerializableObject.cs">
+      <Link>NonSerializableObject.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\Operators\GroupJoinTests.cs">
       <Link>Operators\GroupJoinTests.cs</Link>
     </Compile>
@@ -104,6 +110,9 @@
     </Compile>
     <Compile Include="..\Qactive.Tests\Operators\WhereTests.cs">
       <Link>Operators\WhereTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Tests\QactiveAssert.cs">
+      <Link>QactiveAssert.cs</Link>
     </Compile>
     <Compile Include="..\Qactive.Tests\Queries\ComplexTests.cs">
       <Link>Queries\ComplexTests.cs</Link>
