--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -83,13 +83,16 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="Any.cs" />
     <Compile Include="CoreTests.cs" />
     <Compile Include="DuplexStream.cs" />
     <Compile Include="DuplexSubject.cs" />
     <Compile Include="Extensions\ObservableExtensions.cs" />
+    <Compile Include="NonSerializableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Operators\GroupJoinTests.cs" />
     <Compile Include="Operators\JoinTests.cs" />
+    <Compile Include="QactiveAssert.cs" />
     <Compile Include="Queries\ComplexTests.cs" />
     <Compile Include="Queries\DuplexTests.cs" />
     <Compile Include="Queries\NestedQueryTests.cs" />
